# openflow

./: .coderabbit.yaml  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agents/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  changes.html  hud.html  index.html  package.json  scratchpad.html  settings.html  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: apps.rs  audio.rs  changes.rs  cloud_stt.rs  commands.rs  db.rs  error.rs  fn_gesture.rs  history.rs  hud.rs  llm.rs  main.rs  models.rs  modes.rs  notes.rs  output.rs  permissions.rs  pipeline.rs  profiles.rs  prompts.rs  resample.rs  scratchpad.rs  settings.rs  shortcuts.rs  state.rs  stats.rs  stt.rs  stt_profiles.rs  suggestions.rs  text.rs  tray.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PRD.md  REFINE.md
docs/design/: 00-current-state.md  01-competitive-analysis.md  02-ux-audit.md  03-information-architecture.md  04-onboarding.md  05-discoverability.md  06-custom-instructions.md  07-profiles.md  08-provider-extensibility.md  09-ux-polish.md  10-roadmap.md  README.md  ambient-polish.md  brand.md  code-dictation.md  living-dictionary.md  local-insights.md  quick-transforms.md  snippets.md
docs/engineering/: README.md  architecture-boundaries.md  ipc-contract-conventions.md  monorepo-conventions.md  review-checklist.md
scripts/: check-ipc.mjs  check-privacy.mjs  generate-icon.mjs  release.sh
(+80 files in other folders)
