[package]
name = "openflow"
version = "0.1.0"
description = "Local-first AI voice input for macOS"
license = "MIT"
repository = "https://github.com/KiwiGaze/openflow"
edition = "2021"
rust-version = "1.82"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
cpal = "0.18"
whisper-rs = { version = "0.16", features = ["metal"] }
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync"] }
futures-util = "0.3"
arboard = "3"
enigo = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-av-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "block2",
  "AVCaptureDevice",
  "AVMediaFormat",
] }
# Already in the tree via tao; used to add the HUD's full-screen-overlay
# collection behavior, which Tauri/tao expose no setting for (see hud.rs).
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSResponder",
  "NSWindow",
  "NSPanel",
] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Keep dev builds usable: whisper inference and the resampler are far too
# slow at opt-level 0.
[profile.dev]
opt-level = 1

[profile.dev.package.whisper-rs-sys]
opt-level = 3
